# Poetryize

./: .gitignore  .pre-commit-config.yaml  .precommit-config.yaml  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
poetryize/: poetryize.py
src/poetryize/: poetryize.py
src/tests/: test_poetryize.py
tests/: test_poetryize.py
