[tool.poetry]
name = "poetryize"
version = "0.1.0"
description = "A script that utilized typer, rich to create a tool that converts requirements.txt to be compatible with poetry"
authors = ["thoth2357 <thoth2357@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetryize"}]
repository = "https://github.com/thoth2357/poetry"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.6.0"
asgiref = "3.7.2"
async-timeout = "4.0.2"
asyncio = "3.4.3"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
annotated-types = "0.5.0"

[tool.poetry.scripts]
poetryize = "poetryize.poetryize:app"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
